--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -9,6 +9,17 @@
         android:layout_height="50dp"
         android:background="#484e61">
 
+        <Button
+            android:id="@+id/switch_city"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_alignBottom="@+id/city_name"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_marginLeft="10dp"
+            android:layout_marginStart="10dp"
+            android:background="@mipmap/home" />
+
         <TextView
             android:id="@+id/city_name"
             android:layout_width="wrap_content"
@@ -17,6 +28,14 @@
             android:textColor="#fff"
             android:textSize="24sp" />
 
+       <Button
+           android:layout_width="30dp"
+           android:layout_height="30dp"
+           android:id="@+id/refresh_weather"
+           android:layout_alignParentRight="true"
+           android:layout_centerVertical="true"
+           android:layout_marginRight="10dp"
+           android:background="@mipmap/refresh"/>
     </RelativeLayout>
 
     <RelativeLayout
@@ -48,7 +67,7 @@
                 android:layout_height="40dp"
                 android:gravity="center"
                 android:textColor="#fff"
-                android:textSize="40sp" />
+                android:textSize="18sp" />
 
             <TextView
                 android:id="@+id/weather_desp"
@@ -74,12 +93,20 @@
                     android:textSize="40sp" />
 
                 <TextView
-                    android:id="@+id/temp2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:layout_marginLeft="10dp"
                     android:layout_marginRight="10dp"
                     android:text="@string/string_1"
+                    android:textColor="#fff"
+                    android:textSize="40sp" />
+
+                <TextView
+                    android:id="@+id/temp2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
                     android:textColor="#fff"
                     android:textSize="40sp" />
 
