--- a/app/src/main/res/layout/weather_layout.xml
+++ b/app/src/main/res/layout/weather_layout.xml
@@ -18,7 +18,7 @@
             android:layout_alignParentStart="true"
             android:layout_marginLeft="10dp"
             android:layout_marginStart="10dp"
-            android:background="@mipmap/home" />
+            android:background="@drawable/simple"/>
 
         <TextView
             android:id="@+id/city_name"
@@ -35,7 +35,7 @@
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
-           android:background="@mipmap/refresh"/>
+           android:background="@drawable/simple2"/>
     </RelativeLayout>
 
     <RelativeLayout
